Update nav html so menu bug on iphone 6 is resolved by using &nbsp. Also CSS update to resolve iphone padding issue.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -342,27 +342,20 @@ footer {
         float: left;
         margin-left: 30px;
         margin-bottom: 20px;
-        line-height: 25px;
-    }
-    #logo {
-        padding: 5px 0 5px 10px;
-        color: #4F000B;
-    }
-    #menu {
         line-height: 120px;
         font-size: 11px;
         padding: 0;
         margin: 0;
         font-weight: bold;
     }
-
+    #logo {
+        padding: 5px 0 5px 10px;
+        color: #4F000B;
+        line-height: 40px;  
+    }
     #menu li {
         list-style-type: none;
         margin-right: 20px;
-    }
-
-    #logo {
-        line-height: 40px;   
     }
     #main-image {
         height: 650px;
@@ -386,6 +379,10 @@ footer {
         width: 50%;
         flex-basis: 400px;
         padding: 0;
+    }
+    .container-directions-right-inner {
+        width: auto;
+        padding: 30px;
     }
     .attractions-image-img {
         min-width: 100%;
